<resources>
    <string name="app_name">ImageDrugFinder</string>
    <string name="have_not_enough_image_views">Have not enough image views</string>
    <string name="error_when_works_with_net">Net in your device is sux!</string>
    <string name="not_found">Not found</string>
    <string name="search">Find</string>
    <string name="error_empty_query">Search query must contain not empty text!</string>
    <string name="error_not_enought_urls">Hey man, you have not enough urls</string>
    <string name="et_search_hint">Request</string>
    <string name="quiz_image_views_content_description">One of the images founded for current request</string>
    <string name="idf_logo">IDF</string>
    <string name="first_quot">\"Подлинная тайна жизни заключается в зримом, а не в сокровенном.\"</string>
    <string name="btn_start">Старт</string>
    <string name="tv_progress">ПРОГРЕСС</string>
    <string name="tv_average_time">Среднее время: %d мс</string>
    <string name="tv_progress_num">%d/%d</string>
</resources>