<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightSeaGreen"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="24dp"
        android:background="@drawable/layout_radius_corner"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/idf_logo"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvQuote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/first_quot"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:gravity="center_horizontal"
            android:text="@string/tv_progress"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/progressBarImages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:indeterminate="false"
            android:max="30000"
            android:progress="3000" />

        <TextView
            android:id="@+id/tvProgressNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tv_average_time"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@color/lightSeaGreen"
            android:onClick="onStartActivity"
            android:text="@string/btn_start"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>

